[workspace]
members = [
    "ocamlpool",
    "rust/ocamlrep",
    "ocamlpool/test",
    "rust/macro_test_util",
    "rust/ocamlrep_caml_builtins",
    "rust/ocamlrep_custom",
    "rust/ocamlrep_derive",
    "rust/ocamlrep_marshal/cargo/ocamlrep_marshal",
    "rust/ocamlrep_marshal/cargo/ocamlrep_marshal_ffi_bindings",
    "rust/ocamlrep_ocamlpool",
    "rust/rust_to_ocaml/attr_parser",
    "rust/rust_to_ocaml/rust_to_ocaml",
    "rust/rust_to_ocaml/rust_to_ocaml_attr",
    "rust/signed_source",
    "rust/ocamlrep/test/test_bindings",
    "rust/ocamlrep/test/test_from_ocamlrep",
    "rust/ocamlrep/test/test_from_ocamlrep_in",
    "rust/ocamlrep/test/test_add_root",
]
