[workspace]
members = [
    "macro_test_util",
    "ocamlrep",
    "ocamlrep_caml_builtins",
    "ocamlrep_custom",
    "ocamlrep_custom/test",
    "ocamlrep_derive",
    "ocamlrep_marshal/cargo/ocamlrep_marshal",
    "ocamlrep_marshal/cargo/ocamlrep_marshal_ffi_bindings",
    "ocamlrep_ocamlpool",
    "ocamlrep_ocamlpool/test",
    "rust_to_ocaml/attr_parser",
    "rust_to_ocaml/rust_to_ocaml",
    "rust_to_ocaml/rust_to_ocaml_attr",
    "signed_source",
    "ocamlrep/test/test_bindings",
    "ocamlrep/test/test_from_ocamlrep",
    "ocamlrep/test/test_from_ocamlrep_in",
    "ocamlrep/test/test_add_root",
]
