[workspace]
members = [
    "shim/third-party/rust",

    "macro_test_util",
    "ocamlrep",
    "ocamlrep_caml_builtins",
    "ocamlrep_custom",
    "ocamlrep_derive",
    "ocamlrep_marshal",
    "ocamlrep_ocamlpool",
    "rust_to_ocaml/attr_parser",
    "rust_to_ocaml/rust_to_ocaml",
    "rust_to_ocaml/rust_to_ocaml_attr",
    "signed_source",

    "cargo_test_utils",
    "ocamlrep_custom/test",
    "ocamlrep_ocamlpool/test",
    "ocamlrep_marshal/test",
    "ocamlrep/test/test_bindings",
    "ocamlrep/test/test_from_ocamlrep",
    "ocamlrep/test/test_from_ocamlrep_in",
    "ocamlrep/test/test_add_root",
]
