# This 'Cargo.toml' provides a cargo solution to building the C library
# 'ocamlpool' utilizing the 'cc' crate and a 'build.rs'. It is not generated
# from TARGETS but rather hand-crafted.

[package]
name = "ocamlpool"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type=["staticlib"]
test = false

[build-dependencies]
cc = "1.0.78"
